--- a/css/style.css
+++ b/css/style.css
@@ -8,22 +8,80 @@ h1 {
 }
 
 .grid {
-  width: 400px;
+  height: 500px;
+  width: 500px;
   margin: 0 auto;
   padding: 0;
   list-style: none;
 }
 
 .grid li {
-  width: 100px;
-  height: 100px;
+  /*width: 100px;
+  height: 100px;*/
+  height: 10%;
+  width: 10%;
   float: left;
   margin: 0;
   padding: 0;
+  border-radius: 100%;
 }
 
-.red    { background: red; }
-.green  { background: green; }
-.black  { background: black; }
-.orange { background: orange; }
-.blue   { background: blue; }
+/*.black { background-color:rgb (0,0,0); },*/
+.black {
+  background-color: rgb(0,0,0);
+}
+.darkTeal {
+  background-color: rgb(0,73,73);
+}
+
+.teal  {
+  background-color: rgb(255, 109,182);
+}
+
+.bubblegum {
+  background-color:rgb(255, 109, 182);
+}
+
+.lightPink {
+  background-color: rgb(255, 182, 219);
+}
+
+.purple {
+  background-color: rgb(73, 0, 146);
+}
+
+.blue {
+  background-color: rgb(0, 109 , 219);
+}
+
+.lightPurple {
+  background-color: rgb(182, 109, 255);
+}
+
+.skyBlue {
+  background-color: rgb(109, 182, 255);
+}
+
+.lightBabyBlue {
+  background-color: rgb(182, 219, 255);
+}
+
+.rustyRed {
+  background-color: rgb(146, 0, 0);
+}
+
+.brown {
+  background-color: rgb(146, 73, 0);
+}
+
+.orangeBrown {
+  background-color: rgb(219, 209, 0);
+}
+
+.brightGreen {
+  background-color: rgb(36, 255, 26);
+}
+
+.yellow {
+  background-color: rgb(255, 255, 109);
+}
