--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@ h1 {
 }
 
 h2 {
+  display: inline-block;
 
 }
 
@@ -28,23 +29,23 @@ h2 {
   /*border-radius: 100%;
 }*/
 
-/*li {
+li {
   height: 5%;
   width: 5%;
   float: left;
   margin: 0;
   padding: 0;
   border-radius: 100%;
-}*/
+}
 
-li {
+/*li {
   height: 2%;
   width: 2%;
   float: left;
   margin: 0;
   padding: 0;
   border-radius: 100%;
-}
+}*/
 
 .smallpixel {
   /*width: 100px;
