--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ li {
   float: left;
   margin: 0;
   padding: 0;
-  border-radius: 100%;
+  /*border-radius: 100%;*/
 }
 
 /*li {
@@ -44,7 +44,7 @@ li {
   float: left;
   margin: 0;
   padding: 0;
-  border-radius: 100%;
+  /*border-radius: 100%;*/
 }*/
 
 .smallpixel {
