--- a/css/style.css
+++ b/css/style.css
@@ -20,18 +20,9 @@ h2 {
   list-style: none;
 }
 
-/*li {
+li {
   height: 10%;
   width: 10%;
-  float: left;
-  margin: 0;
-  padding: 0;
-  /*border-radius: 100%;
-}*/
-
-li {
-  height: 5%;
-  width: 5%;
   float: left;
   margin: 0;
   padding: 0;
@@ -39,12 +30,21 @@ li {
 }
 
 /*li {
+  height: 5%;
+  width: 5%;
+  float: left;
+  margin: 0;
+  padding: 0;
+  /*border-radius: 100%;
+}*/
+
+/*li {
   height: 2%;
   width: 2%;
   float: left;
   margin: 0;
   padding: 0;
-  /*border-radius: 100%;*/
+  border-radius: 100%;
 }*/
 
 .smallpixel {
