delete tiles from the end to add peril

--- a/css/style.css
+++ b/css/style.css
@@ -20,14 +20,14 @@ h2 {
   list-style: none;
 }
 
-li {
+/*li {
   height: 10%;
   width: 10%;
   float: left;
   margin: 0;
   padding: 0;
-  /*border-radius: 100%;*/
-}
+  border-radius: 100%;
+}*/
 
 /*li {
   height: 5%;
@@ -38,25 +38,25 @@ li {
   /*border-radius: 100%;
 }*/
 
-/*li {
-  height: 2%;
-  width: 2%;
+li {
+  height: 10px;
+  width: 10px;
   float: left;
   margin: 0;
   padding: 0;
   border-radius: 100%;
-}*/
+}
 
-.smallpixel {
-  /*width: 100px;
-  height: 100px;*/
+/*.smallpixel {
+  width: 100px;
+  height: 100px;
   height: 10%;
   width: 10%;
   float: left;
   margin: 0;
   padding: 0;
-  /*border-radius: 100%;*/
-}
+  border-radius: 100%;
+}*/
 
 /*15 color palette safe for most colorblindness conditions teal, bubblegum, blue and orangeBrown not suitable for tritanopia*/
 
