--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@ body {
 
 h1 {
   text-align: center;
+  color: red;
 }
 
 h2 {
@@ -29,23 +30,23 @@ h2 {
   border-radius: 100%;
 }*/
 
-/*li {
+li {
   height: 5%;
   width: 5%;
   float: left;
   margin: 0;
   padding: 0;
-  /*border-radius: 100%;
-}*/
+  border-radius: 100%;
+}
 
-li {
+/*li {
   height: 10px;
   width: 10px;
   float: left;
   margin: 0;
   padding: 0;
   border-radius: 100%;
-}
+}*/
 
 /*.smallpixel {
   width: 100px;
