grid background now white on play

--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,33 @@
 body {
   text-align: center;
-  font-family: Arial, Helvetica, san-serif;
+  font-family: Roboto, sans-serif;
+  background-color: rgb(255, 250, 250);
 }
 
 h1 {
   text-align: center;
+  font-size: 100px;
+  font-weight: lighter;
   color: red;
+  margin-bottom:0;
 }
 
 h2 {
   display: inline-block;
+  font-size: 50px;
+  font-weight: lighter;
+  margin: 0;
 
 }
 
+p {
+  font-size: 25px;
+  font-weight: lighter;
+}
+
+
 .grid {
+  /*background-color: white;*/
   height: 500px;
   width: 500px;
   margin: 0 auto;
