setInterval now in if statements and stop when board clear

--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,16 @@ p {
   font-weight: lighter;
 }
 
+.about {
+  background-color: transparent;
+
+}
+
+/*.circle {
+  width: 500px;
+  border-radius: 100%;
+}*/
+
 
 .grid {
   /*background-color: white;*/
@@ -45,8 +55,8 @@ p {
 }*/
 
 li {
-  height: 5%;
-  width: 5%;
+  height: 25px;
+  width: 25px;
   float: left;
   margin: 0;
   padding: 0;
