--- a/css/style.css
+++ b/css/style.css
@@ -2,11 +2,12 @@ body {
   text-align: center;
   font-family: Roboto, sans-serif;
   background-color: rgb(255, 250, 250);
+  font-weight: lighter;
 }
 
 h1 {
   text-align: center;
-  font-size: 100px;
+  font-size: 90px;
   font-weight: lighter;
   color: red;
   margin-bottom:0;
@@ -18,6 +19,10 @@ h2 {
   font-weight: lighter;
   margin: 0;
 
+}
+
+h3 {
+  font-weight: lighter;
 }
 
 p {
